# incident-reasoning-engine

./: LICENSE  README.md
backend-incident-agent/: Makefile  agents-cli-manifest.yaml  check_sessions.py  deployment_metadata.json  pyproject.toml  update_main.py
backend-incident-agent/.agents/: hooks.json
backend-incident-agent/app/: agent.py  fast_api_app.py  schemas.py
backend-incident-agent/app/app_utils/: telemetry.py  typing.py
backend-incident-agent/artifacts/grade_results/: results_20260703_021003.html  results_20260703_021003.json  results_20260703_021501.html  results_20260703_021501.json
backend-incident-agent/artifacts/traces/: generated_traces.json  traces_20260703_020935.json
backend-incident-agent/deployment/terraform/single-project/: variables.tf
backend-incident-agent/deployment/terraform/single-project/vars/: env.tfvars
backend-incident-agent/scripts/: validate_commands.py
backend-incident-agent/skills/log-parser/: SKILL.md
backend-incident-agent/skills/post-mortem-generator/: SKILL.md
backend-incident-agent/tests/eval/: eval_config.yaml  generate_traces.py
backend-incident-agent/tests/eval/datasets/: basic-dataset.json
backend-incident-agent/tests/integration/: test_agent.py  test_server_e2e.py
sre-dashboard/: Procfile  main.py  pyproject.toml
