[project]
name = "sre-dashboard"
version = "0.1.0"
description = "SRE Review and Approval Dashboard"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "google-cloud-aiplatform>=1.44.0",
    "pydantic>=2.6.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "google-cloud-firestore>=2.28.0",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
